--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "chart.js": "^3.7.1",
+    "framer-motion": "^6.2.8",
     "history": "^5.2.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
